name:           conduit-parser
version:        0.0.0.2
license:        BSD3
license-file:   LICENSE
maintainer:     Vladimir Sorokin <v.d.sorokin@gmail.com>
synopsis:       Conduit parser
description:    Conduit Parser
category:       Web
build-type:     Simple
cabal-version:  >=1.10
homepage:       http://github.com/vs/si-fetcher
bug-reports:    http://dummy.org

Library
    default-language: Haskell2010
    build-depends: base
                 , cond
                 , conduit
                 , containers
                 , transformers
    exposed-modules: Data.Conduit.Parser, Data.Conduit.ParserT

    ghc-options: -fwarn-incomplete-patterns -O2 -rtsopts -threaded -auto-all -caf-all -fprof-auto -fllvm -funfolding-use-threshold=16
